deploymentconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftCreate
  generation: 8
  labels:
    app: python-simple-http-server
  name: python-simple-http-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: python-simple-http-server
    deploymentconfig: python-simple-http-server
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftCreate
      creationTimestamp: null
      labels:
        app: python-simple-http-server
        deploymentconfig: python-simple-http-server
    spec:
      containers:
      - image: python-simple-http-server
        imagePullPolicy: Always
        name: python-simple-http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp/secrets
          name: password
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: password
        secret:
          defaultMode: 420
          secretName: test
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - python-simple-http-server
      from:
        kind: ImageStreamTag
        name: python-simple-http-server:latest
      lastTriggeredImage: python-simple-http-server
    type: ImageChange
