service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftCreate
  labels:
    app: python-simple-http-server
  name: python-simple-http-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-simple-http-server
    deploymentconfig: python-simple-http-server
  sessionAffinity: None
  type: ClusterIP
