route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: python-simple-http-server
  name: python-simple-http-server
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: python-simple-http-server
    weight: 100
  wildcardPolicy: None
